@@ -7,7 +7,8 @@ Cogent 1.3 - 1.4
 
 New Features
 ------------
-
+* added new tools for evaluating clustering stresses, goodness_of_fit.
+  In cogent.cluster .
 * added a new clustering tool, procrustes analysis.  In cogent.cluster .
 * phylo.distance.EstimateDistances class has a new argument, modify_lf. This
   allows the use the modify the likelihood function, possibly constraining
